--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@ button:hover {
     background-color: #3f8579;
 }
 
-ul#guesses {
+ul#guesses, ul#computer-guesses {
     list-style: none;
     padding: 0;
     margin: 20px 0;
 }
 
-ul#guesses li {
+ul#guesses li, ul#computer-guesses li{
     background-color: #555;
     padding: 10px;
     margin-bottom: 5px;
